Fri Mar  6 13:27:45 MET 1998 Kai Krueger <krueger@mathematik.uni-kl.de>
	* new: libparse.l,libparse.cc,utils.cc,ytils.h
	  scanner for a quick check of singular-libraries.
	* Makefile.in,mod2.h.in,iplib.cc,structs.h,subexpr.h
	  use a scanner when loading libraries. 
	* grammar.y,ipassign.cc,subexpr.h
	  procinfo: added position of end of proc-definition
	            added flag for 'static'-proc (proc that can only be used
	                  in the library they are defined).
	* LIB: deform.lib,finvar.lib,hnoether.lib,normal.lib,presolve.lib
	       primdec.lib,tex.lib
	  made fixes requested by libparse (s.a. brackets, ....)
	
Mon Mar  2 16:18:25 MET 1998 hannes
   * changed handling of "echo" in examples: do not report file + lineno
     (febase.inc,lib0lib.res, inoutlib.res, mem.res, homlib.res)

Fri Feb 27 15:02:10 MET 1998 hannes
   * new input scheme: many modifications to febase.h, febase.inc,
     febase.cc, scanner.l, grammar.y, iplib.cc

Tue Feb 17 18:43:11 MET 1998 hannes
	* added additional factorization check after redTail
	  (kstdfac.cc)

1998-02-17  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* longalg.cc (napWrite): made it globally available to support
	FACTORY_DEBUG_OUT

	* clapsing.cc (singclap_algdividecontent): inserted
	FACTORY_DEBUG_OUT
	
Mon Feb 16 10:43:38 MET 1998 hannes
   * added HAVE_TCL to ring.cc

Mon Feb  9 12:28:21 MET 1998 hannes
   * added tests for coeff-filed GF(q), added stbus for GF(q)-conversion
     (clapconv.cc clapsing.cc clapconv.h)

Tue Jan 27 19:45:19 MET 1998 hannes
   *  bug fixes for TEST_MAC_ORDER (binom.* polys-impl.h, spSpolyLoop.cc)
      (binom.* poly-impl.* spSpolyLoop.cc)

Mon Jan 26 18:40:43 MET 1998 hannes
   * changes in iparith.cc for define: PROC_BUG
     useful, if c++ cannot type cast proc variables

Sat Jan 24 18:21:24 MET 1998 hannes
   * bug fixes for TEST_MAC_ORDER (binom.* polys-impl.h, spSpolyLoop.cc)

Sat Jan 17 18:56:34 MET 1998 hannes